# topic-opinion-agent

./: .env.example  .gitignore  README.md  mon_mar_09_2026_agent系统架构与实现细节.json  pyproject.toml
MindSpider/: mindspider_topic_search.py
MindSpider/DeepSentimentCrawling/: main.py  platform_crawler.py
MindSpider/data/: daily_keywords.txt
MindSpider/schema/: mindspider_tables_postgres.sql
app/agents/: opinion_agent.py  preprocess_agent.py  report_agent.py  risk_agent.py  sentiment_agent.py
app/api/: main.py
app/common/: constants.py  logging_config.py
app/data/: __init__.py  external_bocha.py  fusion.py  mindspider_adapter.py  pg_repository.py
app/llm/: gateway.py
app/schemas/: analysis.py  doc.py  task.py
app/storage/: db.py  history.py  task_repo.py
app/ui/: streamlit_app.py
app/workflow/: pipeline.py
requirements/: crawler.txt
scripts/: rotating_crawler.sh  test_pg_fetch.py
tests/: conftest.py  test_llm_gateway.py  test_opinion_agent.py  test_report_agent.py  test_task_repo.py
topic-opinion-agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
topic-opinion-agent/MindSpider/: MINDSPIDER_API.md
topic-opinion-agent/MindSpider/DeepSentimentCrawling/: platform_crawler.py
topic-opinion-agent/app/: mindspider_crawler.py
topic-opinion-agent/requirements/: base.txt  crawler.txt
topic-opinion-agent/tests/: test_evidence_chain.py  test_forecast_agent.py  test_fusion.py  test_history.py  test_pipeline.py  test_preprocess_agent.py  test_risk_agent.py  test_sentiment_agent.py
(+46 files in other folders)
