[project]
name = "topic-opinion-agent"
version = "0.1.0"
description = "基于大语言模型的舆情分析智能体"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy==2.0.43",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.1.1",
    "requests==2.32.5",
    "jinja2==3.1.6",
    "pymysql==1.1.0",
    "aiomysql==0.2.0",
    "asyncmy==0.2.10",
    "aiosqlite==0.21.0",
    "asyncpg",
    "httpx==0.28.1",
    "socksio==1.0.0",
    "cryptography==46.0.3",
    "openai",
    "pydantic-settings",
    "numpy",
    "pandas==2.2.3",
    "regex",
    "tqdm",
    "python-dateutil",
    "pytz",
    "beautifulsoup4",
    "lxml",
    "loguru",
]

[project.optional-dependencies]
api = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==2.11.7",
]
crawler = [
    "playwright==1.45.0",
    "tenacity==8.2.2",
    "opencv-python",
    "redis~=4.6.0",
    "jieba==0.42.1",
    "wordcloud==1.9.3",
    "matplotlib==3.9.0",
    "parsel==1.9.1",
    "pyexecjs==1.5.1",
    "typer>=0.12.3",
    "pyhumps==3.8.0",
    "xhshow>=0.1.3",
    "aiofiles==23.2.1",
    "Pillow==10.4.0",
    "motor>=3.3.0",
    "openpyxl>=3.1.2",
    "websockets>=15.0.1",
]
ui = [
    "streamlit==1.48.1",
]

[tool.uv]
